cmake_minimum_required (VERSION 3.19.4)

project (
	ph_image
	VERSION 1.0
	DESCRIPTION "Very nice project"
	LANGUAGES CXX
)	


if (NOT TARGET ph_cmake)
	add_subdirectory (dependencies/ph_cmake)
	# include (FetchContent)
	# FetchContent_Declare(
  	# 	ph_cmake
  	# 	GIT_REPOSITORY https://github.com/phiwen96/ph_cmake.git
  	# 	GIT_TAG        v0.0.0)

	# FetchContent_GetProperties(ph_cmake)
	
	# if (NOT ph_cmake_POPULATED)
  	# 	FetchContent_Populate (ph_cmake)
  	# 	add_subdirectory (${ph_cmake_SOURCE_DIR} ${ph_cmake_BINARY_DIR})
	# endif ()
endif ()

if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
	set (CMAKE_CXX_STANDARD 20)
	set (CMAKE_CXX_STANDARD_REQUIRED ON)
	set (CMAKE_CXX_EXTENSIONS ON)
	set_property (GLOBAL PROPERTY USE_FOLDERS ON)
	# find_package (Boost 1.75 REQUIRED)
	# include (CTest)
endif()


add_subdirectory (src)


if ((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING) AND BUILD_TESTING)
	add_subdirectory (tests)
endif()